--- a/src/app/product-description/product-description.component.html
+++ b/src/app/product-description/product-description.component.html
@@ -1,10 +1,10 @@
 <div class="row description">
   <div class="col-sm-2">
-    <img src="assets/opacity-zero.jpg" alt="product image" />
+    <img src="assets/albumInfo" alt="product image" />
   </div>
   <div class="col-sm-6">
-    <p class="album-name">Opacity Zero</p>
-    <p class="band-name">The Prependers</p>
+    {{albumInfo?.album.name}}
+    {{albumInfo}}
     <p class="album-release-date">September 25, 2014</p>
   </div>
 </div>
