--- a/src/app/product-description/product-description.component.html
+++ b/src/app/product-description/product-description.component.html
@@ -3,8 +3,9 @@
     <img src="assets/albumInfo" alt="product image" />
   </div>
   <div class="col-sm-6">
-    {{albumInfo?.album.name}}
-    {{albumInfo}}
-    <p class="album-release-date">September 25, 2014</p>
+    <p class="album-name">{{albumInfo?.album.name}}</p>
+    <p class="band-name">{{albumInfo?.artist}}</p>
+    <p class="album-release-date">{{albumInfo?
+      .album.releaseDate}}</p>
   </div>
 </div>
