--- a/src/app/product-tracklisting/product-tracklisting.component.html
+++ b/src/app/product-tracklisting/product-tracklisting.component.html
@@ -1,13 +1,13 @@
 <div class="row tracklisting">
   <ul>
-    <li>
+    <li *ngFor="let track of albumInfo?.album.tracks">
       <div class="col-sm-5">
-        <span class="track-number">{{albumInfo?.1}}</span>
-        <span class="track-name">{{albumInfo?.The Last}}</span>
+        <span class="track-number">{{track.trackNumber}}</span>
+        <span class="track-name">{{track.track-name}}</span>
       </div>
       <div class="col-sm-3 text-right">
-        <span class="track-time">{{albumInfo?.4:48}}</span>
-        <span class="price-and-buy"><button>{{albumInfo?.$0.99}}</button></span>
+        <span class="track-time">{{track.trackLength}}</span>
+        <span class="price-and-buy"><button>{{track.trackPrice}}</button></span>
       </div>
     </li>
   </ul>
