--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,15 +1,4 @@
-<div class="row ProductList">
   <ul>
-    <li *ngFor="let track of product?.product.tracks">
-      <div class="col-sm-5">
-        <span class="track-number">{{track.trackNumber}}</span>
-        <span class="track-name">{{track.trackName}}</span>
-      </div>
-      <div class="col-sm-3 text-right">
-        <span class="track-time">{{track.trackLength}}</span>
-        <span class="price-and-buy"><button>{{track.trackPrice}}</button></span>
-      </div>
-    </li>
+    <li *ngFor="let product of products">{{product.albumName}}</li>
   </ul>
-</div>
-
+  
